<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Book List</string>
    <string name="title_mblphotoviewer" tools:keep="@string/title_mblphotoviewer">Photo Viewer</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="add_fav">Add to Favorite</string>
    <string name="remove_fav">Remove from Favorite</string>
    <string name="book_detail">Book Detail</string>
    <string name="search">Search</string>
    <string name="title_mblfavorite" tools:keep="@string/title_mblfavorite">Favorite Book List</string>
    <string name="back_button">Back Button</string>
    <string name="book_images">Book Images</string>
</resources>