<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?colorPrimary"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        android:elevation="5dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/baseline_back_24"
                app:tint="@color/white"
                android:backgroundTint="@android:color/transparent"
                />

            <TextView
                android:id="@+id/title"
                android:gravity="start|center_vertical"
                android:text="@string/book_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageBook"
                android:contentDescription="@string/book_images"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/titleBook"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@id/imageBook"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/favTextBook"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/added_to_favorite"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/favBtnBook"
                app:layout_constraintBottom_toBottomOf="@id/favBtnBook"/>

            <Button
                android:id="@+id/favBtnBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/titleBook"
                app:layout_constraintStart_toEndOf="@id/favTextBook"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_fav"
                />

            <TextView
                android:id="@+id/subBook"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@id/favBtnBook"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/descBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@id/subBook"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>